--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     }
   ],
   "dependencies": {
+    "commander": "^2.9.0",
     "deep-freeze": "0.0.1",
     "findup-sync": "^0.4.2",
     "fs-jetpack": "^0.9.2",
