--- a/package.json
+++ b/package.json
@@ -23,29 +23,29 @@
     }
   ],
   "dependencies": {
-    "commander": "^2.9.0",
-    "deep-freeze": "0.0.1",
-    "findup-sync": "^0.4.2",
-    "fs-jetpack": "^0.9.2",
-    "lodash": "^4.15.0",
-    "pkg-up": "^1.0.0",
-    "req-all": "^0.1.0",
-    "yargs": "^5.0.0"
+    "commander": "~2.9.0",
+    "deep-freeze": "~0.0.1",
+    "findup-sync": "~0.4.3",
+    "fs-jetpack": "~0.10.5",
+    "lodash": "~4.17.4",
+    "pkg-up": "~1.0.0",
+    "req-all": "~1.0.0",
+    "yargs": "~6.6.0"
   },
   "devDependencies": {
-    "blue-tape": "^0.2.0",
-    "commitizen": "^2.8.6",
-    "cz-conventional-changelog": "^1.2.0",
-    "faucet": "0.0.1",
-    "fixpack": "^2.3.1",
-    "ghooks": "^1.3.2",
-    "linkr": "^0.1.0",
-    "updtr": "^0.2.1",
-    "xo": "^0.16.0"
+    "blue-tape": "~1.0.0",
+    "commitizen": "~2.9.5",
+    "cz-conventional-changelog": "~1.2.0",
+    "eslint": "~3.14.0",
+    "eslint-config-xo": "~0.17.0",
+    "faucet": "~0.0.1",
+    "fixpack": "~2.3.1",
+    "ghooks": "~2.0.0",
+    "linkr": "~0.1.0",
+    "updtr": "~0.2.3"
   },
   "engines": {
-    "node": ">=6.1.0",
-    "npm": ">=3.10.0"
+    "node": ">=6"
   },
   "homepage": "https://github.com/raypatterson/sws-config",
   "keywords": [
@@ -69,20 +69,5 @@
     "test:fail": "exit 1",
     "test:pass": "exit 0",
     "upgrade": "updtr && fixpack"
-  },
-  "xo": {
-    "envs": [
-      "node",
-      "commonjs"
-    ],
-    "esnext": true,
-    "space": false,
-    "globals": [],
-    "rules": {
-      "padded-blocks": [
-        1,
-        "always"
-      ]
-    }
   }
 }
