fix(linting): Fixed linting script.

--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "commit": "git-cz",
     "link": "linkr",
     "link:rm": "linkr remove && npm i",
-    "lint": "xo --fix",
+    "lint": "eslint --fix",
     "test": "npm run test:pass",
     "test:fail": "exit 1",
     "test:pass": "exit 0",
